--- a/index.html
+++ b/index.html
@@ -28,16 +28,22 @@
             <div class="card-header__user">
                 <img src="./img/logo.png" alt="garfield-gitcode-logo">
             </div>
-            <h3>Garfield Gitcode <p>@garfield_gitcode</p></h3>
+            <h3>Garfield Gitcode <p>@garfield_gitcode</p>
+            </h3>
         </div>
 
         <div class="card-body">
             <nav class="navbar-responsive">
                 <input type="checkbox" id="nav-check">
                 <div class="nav-logo">GC</div>
-                <label for="nav-check">
-                    <div class="nav-menu"><i class="fa-solid fa-bars"></i></div>
+
+                <label for="nav-check" class="nav-menu">
+                    <div class="menu-icon"></div>
                 </label>
+
+                <!-- <label for="nav-check">
+                    <div class="nav-menu"><i class="fa-solid fa-bars"></i></div>
+                </label> -->
                 <div class="nav-links">
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -48,6 +54,8 @@
             </nav>
         </div>
     </div>
+
+    <script type="module" src="./app.js"></script>
 </body>
 
 </html>
