--- a/index.html
+++ b/index.html
@@ -41,9 +41,24 @@
                 </label>
                 <div class="nav-links">
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li class="nav-item">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            Categories
+                            <i class="fa-solid fa-caret-down"></i>
+                        </li>
+                        <div class="dropdown-menu">
+                            <a href="#" class="dropdown-item">Categorie #1</a>
+                            <a href="#" class="dropdown-item">Categorie #2</a>
+                            <a href="#" class="dropdown-item">Categorie #3</a>
+                        </div>
+                        <li class="nav-item">
+                            <a href="#">About us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#">Contact</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
